@@ -4,7 +4,8 @@
       gtk_widget_get_preferred_size is not defined, as be the case for Gtk2
       and GSEAL_ENABLE is defined.
 
-    * src/widgets/geda_bulb.c: Remove function button_set_depressed.
+    * src/widgets/geda_bulb.c: Remove function button_set_depressed and related
+      cruft, the widget is a light bulb and never gets depressed.
 
 2020-01-14 Wiley E. Hill <wileyhill@gmail.com>
 
